--- a/src/app/pages/auth/olvido-contrasena/olvido-contrasena.page.html
+++ b/src/app/pages/auth/olvido-contrasena/olvido-contrasena.page.html
@@ -1,11 +1,40 @@
-<app-header title=" REGRISTRAPP"></app-header>
+<app-header backbutton="/auth" title=" REGRISTRAPP"></app-header>
+<ion-content >
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">olvido-contrasena</ion-title>
-      <h2>sfergsefgbv</h2>
-    </ion-toolbar>
+  <div class="d-flex-center">
+
+<form [formGroup]="form" class="auth-form" (ngSubmit)="submit()" (keypress.enter)="submit()">
+
+ 
+   
+  <ion-header >
+      <h1 class="ion-text-center"><strong >Recuperar Cuenta</strong></h1>
   </ion-header>
-</ion-content>
+  <p class="ion-text-center">Te enviaremos un email para reestablecer tu contraseña</p>
+      <app-custom-input icon="mail-outline"
+                      autocomplete="email"
+                      [control]="form.controls.email"
+                      type="email"
+                      label="correo"
+                      ></app-custom-input>
+
+                      <div class="validators" *ngIf="form.controls.email.errors && form.controls.email.touched">
+                        <div *ngIf="form.controls.email.errors?.['required']">El correo es requerido</div>
+                        <div *ngIf="form.controls.email.errors?.['email']">Ingrese un correo valido</div>
+                      </div>
+                        
+                        <ion-button  expand="block"  mode="ios" class="submit" type="submit" [disabled]="form.invalid ">
+                          Recuperar <ion-icon slot="end" name="arrow-forward"></ion-icon>
+                        </ion-button>
+
+                        
+    </form>
+
+    
+  </div>  
+
+
+
+
   
+</ion-content>
