--- a/src/app/pages/auth/auth.page.html
+++ b/src/app/pages/auth/auth.page.html
@@ -1,4 +1,4 @@
- <app-header backbutton="/home" title=" REGRISTRAPP" ></app-header>
+ <app-header  title=" REGRISTRAPP" ></app-header>
 <ion-content >
 
   <div class="d-flex-center">
