--- a/src/app/pages/auth/registrar-usuario/registrar-usuario.page.html
+++ b/src/app/pages/auth/registrar-usuario/registrar-usuario.page.html
@@ -11,7 +11,7 @@
 <!-----------------------------------------------------------NOMBRE-------------------------->
       <app-custom-input 
       icon="person-outline"
-      autocomplete="name" 
+      autocomplete="correo" 
       [control]="form.controls.name" 
       type="text"
       label="Nombre"></app-custom-input>
